# test-ic-boa-async

./: Cargo.toml  README.md  dfx.json  flake.nix  test.sh
canisters/boa/: Cargo.toml
canisters/boa/src/: lib.rs
