
[package]
name = "boa"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3.2"
ic-cdk-macros = "0.3.2"
Boa = { git = "https://github.com/lastmjs/boa-azle" } # This repo is required for IC compilation
getrandom = { version = "0.2.3", features = ["custom"] }
serde = "1.0.130"
serde_json = "1.0.68"
